--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ._.ipynb_checkpoints
 .DS_STORE
-._plot-results*
-plot-results-jvsc-*
+._the_geometry_of_hidden_representations*
+the_geometry_of_hidden_representations-jvsc-*
 __pycache__
